--- a/html/logic_simulator.html
+++ b/html/logic_simulator.html
@@ -14,15 +14,16 @@
 </head>
 <body>
 	<div id = "selectorbar">
-		<div class = "selector" id = "addinput" onclick="Input()"><h1>INPUT</h1></div>
-		<div class = "selector" id = "addnot" onclick="Not()"> <h1>NOT</h1></div>
-		<div class = "selector" id = "addand" onclick="And()"><h1>AND</h1></div>
-		<div class = "selector" id = "addnand" onclick="Nand()"><h1>NAND</h1></div>
-		<div class = "selector" id = "addor" onclick="Or()"><h1>OR</h1></div>
-		<div class = "selector" id = "addnor" onclick="Nor()"><h1>NOR</h1></div>
-		<div class = "selector" id = "addxor" onclick="Xor()"><h1>XOR</h1></div>
-		<div class = "selector" id = "addoutput" onclick="Output()"><h1>OUTPUT</h1></div>
+		<div class = "selector" id = "addinput" onclick="Add_Input()"><h1>INPUT</h1></div>
+		<div class = "selector" id = "addnot" onclick="Add_Not()"> <h1>NOT</h1></div>
+		<div class = "selector" id = "addand" onclick="Add_And()"><h1>AND</h1></div>
+		<div class = "selector" id = "addnand" onclick="Add_Nand()"><h1>NAND</h1></div>
+		<div class = "selector" id = "addor" onclick="Add_Or()"><h1>OR</h1></div>
+		<div class = "selector" id = "addnor" onclick="Add_Nor()"><h1>NOR</h1></div>
+		<div class = "selector" id = "addxor" onclick="Add_Xor()"><h1>XOR</h1></div>
+		<div class = "selector" id = "addoutput" onclick="Add_Output()"><h1>OUTPUT</h1></div>
 	</div>
-	<div id="simzone"></div>
+	<div id="simzone">
+	</div>
 </body>
 </html>
