Improved CSS Styling

--- a/html/logic_simulator.html
+++ b/html/logic_simulator.html
@@ -14,16 +14,17 @@
 </head>
 <body>
 	<div id = "selectorbar">
-		<div class = "selector" id = "addinput" onclick="Add_Input()"><h1>INPUT</h1></div>
-		<div class = "selector" id = "addnot" onclick="Add_Not()"> <h1>NOT</h1></div>
-		<div class = "selector" id = "addand" onclick="Add_And()"><h1>AND</h1></div>
-		<div class = "selector" id = "addnand" onclick="Add_Nand()"><h1>NAND</h1></div>
-		<div class = "selector" id = "addor" onclick="Add_Or()"><h1>OR</h1></div>
-		<div class = "selector" id = "addnor" onclick="Add_Nor()"><h1>NOR</h1></div>
-		<div class = "selector" id = "addxor" onclick="Add_Xor()"><h1>XOR</h1></div>
-		<div class = "selector" id = "addoutput" onclick="Add_Output()"><h1>OUTPUT</h1></div>
+		<div class = "selector" id = "addinput" onclick="Add_Input()"><span><h1>INPUT</h1></span></div>
+		<div class = "selector" id = "addnot" onclick="Add_Not()"><span><h1>NOT</h1></span></div>
+		<div class = "selector" id = "addand" onclick="Add_And()"><span><h1>AND</h1></span></div>
+		<div class = "selector" id = "addnand" onclick="Add_Nand()"><span><h1>NAND</h1></span></div>
+		<div class = "selector" id = "addor" onclick="Add_Or()"><span><h1>OR</h1></span></div>
+		<div class = "selector" id = "addnor" onclick="Add_Nor()"><span><h1>NOR</h1></span></div>
+		<div class = "selector" id = "addxor" onclick="Add_Xor()"><span><h1>XOR</h1></span></div>
+		<div class = "selector" id = "addoutput" onclick="Add_Output()"><span><h1>OUTPUT</h1></span></div>
 	</div>
-	<div id="simzone">
+	<div id="wrapper">
+		<div id="simzone"></div>
 	</div>
 </body>
 </html>
